# sourcio

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  answer.py  budget.py  config.py  docker-compose.yml  pyproject.toml  retrieval.py
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  smoke.yml
agent/: README.md  __init__.py  graph.py  persistence.py  state.py
agent/nodes/: __init__.py  explain.py  generate.py  grade.py  quiz.py  quiz_grade.py  reexplain.py
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_quiz.py  0004_student_user_ownership.py  0006_sessions.py  0007_reviews.py  0009_message_ref_id.py  0010_user_username.py  0011_drop_reviews.py
api/: README.md  auth.py  deps.py  logging_config.py  main.py  middleware.py  runtime.py  schemas.py
api/routers/: __init__.py  ask.py  auth.py  courses.py  documents.py  exercise.py  feedback.py  grade.py  health.py  history.py  quiz.py  reexplain.py  reviews.py  sessions.py  source.py
api/schemas/: __init__.py  account.py  ask.py  documents.py  exercise.py  grade.py  quiz.py  reviews.py
core/: README.md  __init__.py  answer.py  ask.py  config.py  courses.py  documents.py  errors.py  jobs.py  llm.py  obs.py  prompts.py  qdrant.py  query.py  retrieval.py  scheduling.py  sources.py  storage.py
db/: README.md  __init__.py  models.py  session.py
docs/: ARCHITECTURE.md  DEMO.md  DEPLOY-API.md  DEPLOY.md  LOCAL.md  OBSERVABILITY.md  OPERATIONS.md  POSTGRES.md  RUN-LOCAL.md
docs/tech/: README.md  auth-security.md  database.md  deployment.md  embeddings.md  evaluation.md  fastapi.md  langchain.md  langfuse.md  langgraph.md  nextjs.md  qdrant.md  rag.md
eval/: README.md  ab_retrieval.py  bench-compare.md  bench-groq.json  bench-openai-latency.json  bench-openai.json  bench_runner.py  benchmark.py  benchmark_cases.json  calibrate.py  dataset.jsonl  live_eval.py  live_eval_cases.json  report.py  run_eval.py
ingestion/: README.md  chunk.py  embed.py  extract.py  index.py  mathdetect.py  retry.py  run.py  schema.py
scripts/: smoke.sh
tests/: README.md  conftest.py  test_ab_retrieval.py  test_agent.py  test_api.py  test_ask_cli.py  test_auth.py  test_benchmark.py  test_budget.py  test_calibrate.py  test_config.py  test_cors.py  test_courses.py  test_db.py  test_documents.py  test_errors.py  test_eval.py  test_eval_report.py  test_extract.py  test_grounding.py  test_hybrid.py  test_hyde.py  test_ingest_text.py  test_latency.py  test_metrics.py  test_middleware.py  test_migrations.py  test_multiuser.py  test_neighbors.py  test_obs.py  test_observability.py  test_ownership.py  test_postgres_backend.py  test_query.py  test_quiz.py  test_retrieval.py  test_router_errors.py  test_sessions.py  test_source.py  test_spaced_repetition.py  (+2 more)
ui/: app.py  metrics.py
web/: .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/components/: AnswerProgress.tsx  AuthCard.tsx  AuthGate.tsx  AuthMenu.tsx  Button.tsx  Card.tsx  ChapterSelect.tsx  CitationChip.tsx  CourseSelect.tsx  ExportActions.tsx  Features.tsx  HealthBadge.tsx  Hero.tsx  HowItWorks.tsx  LandingCta.tsx  LanguageToggle.tsx  LevelSelector.tsx  Markdown.tsx  RefreshButton.tsx  RigorSelector.tsx  SectionIntro.tsx  SettingsPanel.tsx  Spinner.tsx  States.tsx  StatsBand.tsx  Tabs.tsx  TextField.tsx  ThemeToggle.tsx  ThinkingIndicator.tsx  ThreadSelect.tsx  Toast.tsx
web/components/panels/: AskPanel.tsx  DocumentsPanel.tsx  ExercisePanel.tsx  GradePanel.tsx  HistoryPanel.tsx  QuizPanel.tsx  ReexplainPanel.tsx  ReviewPanel.tsx  ThreadsPanel.tsx
web/lib/: api.ts  cn.ts  exportAnswer.ts  highlight.ts  i18n.tsx  keys.ts  scroll.ts  storage.ts
web/lib/api/: client.ts  endpoints.ts  index.ts  types.ts
web/lib/locales/: en.ts  fr.ts  nl.ts
