[project]
name = "grounded-rag"
version = "0.1.0"
description = "A grounded RAG-LLM that answers strictly from your own documents, with citations and a faithfulness guard."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langchain-core>=1.4",
    "langchain-openai>=0.2",
    "langchain-anthropic>=0.3",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "qdrant-client>=1.12",
]

# Installed per phase, e.g. `uv sync --extra ingestion`
[project.optional-dependencies]
ingestion = [
    "pymupdf>=1.24",
    "sentence-transformers>=3.0",
]
agent = [
    "langgraph>=0.2",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "pydantic>=2.13",
    # User authentication: bcrypt password hashing + JWT (HS256) access tokens.
    "bcrypt>=4.0",
    "pyjwt>=2.8",
    # Multipart form parsing for file uploads (POST /documents/upload).
    "python-multipart>=0.0.9",
]
obs = [
    "langfuse>=2.0",
]
ui = [
    "streamlit>=1.39",
    "httpx>=0.28",
]
migrations = [
    "alembic>=1.13",
]
# PostgreSQL backend (optional). The app already speaks SQLAlchemy, so switching
# is a matter of installing the psycopg 3 driver and pointing `DATABASE_URL` at a
# `postgresql+psycopg://...` URL. SQLite stays the zero-setup default; this extra
# is only needed when targeting PostgreSQL. See docs/POSTGRES.md.
postgres = [
    "psycopg[binary]>=3.1",
]
# Fully local, zero-cost LLM provider (Ollama). Optional so OpenAI users are not
# forced to install it: `uv sync --extra local`.
local = [
    "langchain-ollama>=0.2",
]
# Free-tier hosted LLM provider (Groq). Optional so OpenAI/Ollama users are not
# forced to install it: `uv sync --extra groq`. Enables `LLM_PROVIDER=groq`
# (reads GROQ_API_KEY from the environment) for a zero-cost public deployment.
groq = [
    "langchain-groq>=0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=4.0",
]

# Application, not a library: uv manages the venv + lock without building the project.
[tool.uv]
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
# Measure the application packages only; exclude tests, migrations and the web
# frontend. The minimum-coverage threshold is enforced on the CLI in CI
# (see .github/workflows/ci.yml) so it lives in one place.
source = ["core", "agent", "api", "db", "ingestion", "eval"]
omit = [
    "tests/*",
    "alembic/*",
    "web/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.pyright]
# Static type-check the application source only. Tests, migrations, the local
# virtualenv and the web frontend are out of scope.
include = ["agent", "api", "core", "db", "ingestion", "eval"]
exclude = ["tests", "alembic", ".venv", "web"]
# Resolve imports against the project virtualenv so installed extras are seen.
venvPath = "."
venv = ".venv"
# Heavy optional extras (PyMuPDF/fitz, sentence-transformers, langchain-community)
# are intentionally not installed in CI to avoid the multi-GB torch/CUDA bloat,
# so unresolved imports are expected and must not fail the type check.
reportMissingImports = false
